--- a/index.html
+++ b/index.html
@@ -145,8 +145,6 @@
       timeline.push(infoBlock)
     }
 
-    timeline.push(demog_page)
-
 
 
 
@@ -157,29 +155,28 @@
     var instructioncorrect= false
 
 
-    // /* define a page for the incorrect response */
-    // var showsplash = true;
-    // var splash_screen = {
-    //   type: 'html-button-response',
-    //   timing_post_trial: 0,
-    //   choices: ['Click here to read the instructions again'],
-    //   on_trial_start: function() {setTimeout(function() {setDisplay("jspsych-btn","")}, 500)},
-    //   is_html: true,
-    //   data: { easyName: 'fail', taskType: jsPsych.timelineVariable('taskType')},      
-    //   stimulus: "You didn't click in the right area. Re-read the instructions and try again."
-    // }
+    /* define a page for the incorrect response */
+    var error_screen = {
+      type: jsPsychHtmlButtonResponse,
+      timing_post_trial: 0,
+      choices: ['Click here to read the instructions again'],
+      on_trial_start: function() {setTimeout(function() {setDisplay("jspsych-btn","")}, 500)},
+      is_html: true,
+      data: { easyName: 'fail', taskType: jsPsych.timelineVariable('taskType')},      
+      stimulus: "You didn't click in the right area. Re-read the instructions and try again."
+    }
 
-    // /* ...but push it to a conditional node that only shows it if the response was wrong */
-    // var conditional_splash = {
-    //   timeline: [splash_screen],
-    //   conditional_function: function(data) {
-    //     return !instructioncorrect // skip if correct
-    //   }
-    // }
+    /* ...but push it to a conditional node that only shows it if the response was wrong */
+    var conditional_error = {
+      timeline: [error_screen],
+      conditional_function: function(data) {
+        return !instructioncorrect // skip if correct
+      }
+    }
 
-
+  
     var training1 = { type: jsPsychBKKSurveyText, 
-        preamble: '<h1>Training Section</h1><p>In the experiment you will be shown various shapes and asked to record your emotional response to each shape. The next few pages will introduce how to record your response <b>you must read all of this page. The page is timed and you cannot move forward more quickly by not reading the page. </b> </p>' +
+        preamble: '<h1>Training Section</h1><p>In the experiment you will be shown various shapes and asked to record your emotional response to each shape. The next few pages will introduce how to record your response <b>you must read all of this page. The page is timed and you cannot move forward more quickly by not reading. </b> </p>' +
 
 
                   '<p>To record your emotional response you will click on a graph like the one shown below. The top of the graph represents very high energy feelings. The bottom of the graph represents very low energy feelings. The centre represents neutral feelings. You can click anywhere from top to bottom to record more or less energetic feelings</p>'+
@@ -188,6 +185,7 @@
 
                   '<p>For each shape you should look at the shape and take some time to reflect on how it feels to you. Then you should click on the place on the graph that represents how you feel.  </p>'  +
 
+                  '<p><b>Over the next few pages we will give some examples of using the circumplex. For each page, follow the instructions on where to click.</b> </p>'  +                  
                   '<p>Click anywhere on the graph and then click submit to continue.</p>' +
                   '<br>', 
         // For testing you can turn this off so you don't need to click the cirucmplex each time
@@ -198,26 +196,14 @@
         draw_bkk: false, // HIDING BKK FOR THESE INTRODUCITON TRIALS
         gui_show:false, 
         questions: [],      
-        data: {trialCategory: "training"},
-      on_trial_start: function() { setTimeout(function() {setDisplay("jspsych-btn","")}, 1000)},
-      on_finish: function(data) {
-        console.log(data.valence, data.arousal)
-
-          // var correct = jsPsych.timelineVariable('correct_answers', true)        
-          // instructioncorrect = false; 
-          // if( data.responses == correct) {
-          //   action = false;
-          //   instructioncorrect = true;
-          // }
-
-        }
+        data: {trialCategory: "training"}
       } 
       trainingTimeline.push(training1)
-      // tr_loop_1.push(training1)
 
 
 
 
+    var tr_2 = []
     var training2 = { type: jsPsychBKKSurveyText, 
         data: {trialCategory: "training"},
         preamble: '<center><img src="./img/happy_excited.jpg"></img></center><p> This image is of someone happy and excited. These kinds of feelings belong in the top right corner of the graph. They are very high energy (top), and very positive (right). Click close to the top right corner of the graph, and then click submit.</p>', 
@@ -229,16 +215,33 @@
         draw_bkk: false, // HIDING BKK FOR THESE INTRODUCITON TRIALS
         gui_show:false, 
         questions: [],
-        data: {trialCategory: "training"}
+      on_trial_start: function() { setTimeout(function() {setDisplay("jspsych-btn","")}, 1000)},
+      on_finish: function(data) {
+        console.log(data.valence, data.arousal)
+          instructioncorrect = false; 
+          if( data.valence >  0.6 & data.arousal > 0.6) {
+            action = false;
+            instructioncorrect = true;
+          }
+        }
       } 
-      trainingTimeline.push(training2)
+
+      tr_2.push(training2)
+      tr_2.push(conditional_error)
+    /* finally, add the entirety of this introductory section to a loop node ... */
+    var tr_loop_2 = {
+      timeline: tr_2,
+      loop_function: function(data) {return !instructioncorrect }
+    }
+    trainingTimeline.push(tr_loop_2) // ... and add that to the timeline
 
 
 
 
+    var tr_3 = []
     var training3 = { type: jsPsychBKKSurveyText, 
         data: {trialCategory: "training"},
-        preamble: '<center><img src="./img/sad.jpg"></img></center><p> This image is of someone very sad or depressed. These kinds of feelings belong in the bottom left corner of the graph. They are very low energy (bottom), and very negative (left). Click close to the bottom left corner of the graph, and then click submit.</p>', 
+        preamble: '<center><img src="./img/sad.jpg"></img></center><p> Great. Now this image is of someone very sad or depressed. These kinds of feelings belong in the bottom left corner of the graph. They are very low energy (bottom), and very negative (left). Click close to the bottom left corner of the graph, and then click submit.</p>', 
         // For testing you can turn this off so you don't need to click the cirucmplex each time
         circClick_required: true, 
         //  For testing set this to zero so you don't need to wait
@@ -247,12 +250,27 @@
         draw_bkk: false, // HIDING BKK FOR THESE INTRODUCITON TRIALS
         gui_show:false, 
         questions: [],
-        data: {trialCategory: "training"}
+      on_trial_start: function() { setTimeout(function() {setDisplay("jspsych-btn","")}, 1000)},
+      on_finish: function(data) {
+        console.log(data.valence, data.arousal)
+          instructioncorrect = false; 
+          if( data.valence <  0.4 & data.arousal < 0.4) {
+            action = false;
+            instructioncorrect = true;
+          }
+        }
       } 
-      trainingTimeline.push(training3)
+      tr_3.push(training3)
+      tr_3.push(conditional_error)
+    /* finally, add the entirety of this introductory section to a loop node ... */
+    var tr_loop_3 = {
+      timeline: tr_3,
+      loop_function: function(data) {return !instructioncorrect }
+    }
+    trainingTimeline.push(tr_loop_3) // ... and add that to the timeline
 
 
-
+    var tr_4 = []
     var training4 = { type: jsPsychBKKSurveyText, 
         data: {trialCategory: "training"},
         preamble: '<center><img src="./img/sad.jpg"></img></center><p> This image is of someone feeling relaxed and cozy. These kinds of feelings belong in the bottom right corner of the graph. They are very low energy (bottom), and very positive (right). Click close to the bottom right corner of the graph, and then click submit.</p>', 
@@ -264,11 +282,26 @@
         draw_bkk: false, // HIDING BKK FOR THESE INTRODUCITON TRIALS
         gui_show:false, 
         questions: [],
-        data: {trialCategory: "training"}
+      on_trial_start: function() { setTimeout(function() {setDisplay("jspsych-btn","")}, 1000)},
+      on_finish: function(data) {
+        console.log(data.valence, data.arousal)
+          instructioncorrect = false; 
+          if( data.valence >  0.6 & data.arousal < 0.4) {
+            action = false;
+            instructioncorrect = true;
+          }
+        }
       } 
-      trainingTimeline.push(training4)
+      tr_4.push(training4)
+      tr_4.push(conditional_error)
+    /* finally, add the entirety of this introductory section to a loop node ... */
+    var tr_loop_4 = {
+      timeline: tr_4,
+      loop_function: function(data) {return !instructioncorrect }
+    }
+    trainingTimeline.push(tr_loop_4) // ... and add that to the timeline
 
-
+    var tr_5 = []
     var training5 = { type: jsPsychBKKSurveyText, 
         data: {trialCategory: "training"},
         preamble: '<center><img src="./img/sad.jpg"></img></center><p> This image is of someone feeling angry and enraged. These kinds of feelings belong in the top left corner of the graph. They are very high energy (top), and very negative (right). Click close to the top left corner of the graph, and then click submit.</p>', 
@@ -280,15 +313,30 @@
         draw_bkk: false, // HIDING BKK FOR THESE INTRODUCITON TRIALS
         gui_show:false, 
         questions: [],
-        data: {trialCategory: "training"}
+      on_trial_start: function() { setTimeout(function() {setDisplay("jspsych-btn","")}, 1000)},
+      on_finish: function(data) {
+        console.log(data.valence, data.arousal)
+          instructioncorrect = false; 
+          if( data.valence <  0.4 & data.arousal > 0.6) {
+            action = false;
+            instructioncorrect = true;
+          }
+        }
       } 
-      trainingTimeline.push(training5)
+      tr_5.push(training5)
+      tr_5.push(conditional_error)
+    /* finally, add the entirety of this introductory section to a loop node ... */
+    var tr_loop_5 = {
+      timeline: tr_5,
+      loop_function: function(data) {return !instructioncorrect }
+    }
+    trainingTimeline.push(tr_loop_5) // ... and add that to the timeline
 
 
-
+    var tr_6 = []
     var training6 = { type: jsPsychBKKSurveyText, 
         data: {trialCategory: "training"},
-        preamble: '<center><img src="./img/sad.jpg"></img></center><p> Many feelings are in-between these extremes. YOu can use the whole graph to record your feelings. If they are more neutral than the feelings you have seen so far, you can click closer to the middle. For example this picture shows medium energy, fairly positive feelings. These should be somewhere in the middle of left and right middle (fairly neutral). And somewhere in the top half of the graph, not too high. Click somewhere in that area, then click submit</p>', 
+        preamble: '<center><img src="./img/sad.jpg"></img></center><p> Many feelings are in-between these extremes. YOu can use the whole graph to record your feelings. If they are more neutral than the feelings you have seen so far, you can click closer to the middle. For example this picture shows medium energy, fairly positive feelings. These should be somewhere towards the centre, between left and right (fairly neutral), and in the top half of the graph, not too high. Click somewhere in that area, then click submit</p>', 
         // For testing you can turn this off so you don't need to click the cirucmplex each time
         circClick_required: true, 
         //  For testing set this to zero so you don't need to wait
@@ -297,18 +345,106 @@
         draw_bkk: false, // HIDING BKK FOR THESE INTRODUCITON TRIALS
         gui_show:false, 
         questions: [],
-        data: {trialCategory: "training"}
+      on_trial_start: function() { setTimeout(function() {setDisplay("jspsych-btn","")}, 1000)},
+      on_finish: function(data) {
+        console.log(data.valence, data.arousal)
+          instructioncorrect = false; 
+          // if( data.valence >  0.25 & data.valence <  0.75 & data.arousal > 0.5 & data.arousal < 0.9) {
+          if( data.valence >  0.25) {
+         
+            action = false;
+            instructioncorrect = true;
+          }
+        }
       } 
-      trainingTimeline.push(training6)
-
-
+      tr_6.push(training6)
+      tr_6.push(conditional_error)
+    /* finally, add the entirety of this introductory section to a loop node ... */
+    var tr_loop_6 = {
+      timeline: tr_6,
+      loop_function: function(data) {return !instructioncorrect }
+    }
+    trainingTimeline.push(tr_loop_6) // ... and add that to the timeline
 
 
 
     var finishTraining = {
         type: jsPsychHtmlButtonResponse,
         data: {trialCategory: "training"},
-        stimulus: '<p>Thanks, The next four pages will show emotional photographs. Record your feelings about these photographs in the way you have been guided in the last few pages </p>' , 
+        stimulus: '<p>Thanks, The next four pages will show emotional photographs. Now record your own feelings about these photographs in the way you have been guided in the last few pages </p>' , 
+        choices: ["continue"]
+    }
+    trainingTimeline.push(finishTraining)
+
+
+
+//  OASIS --------------------------------------------------------------------------------------------------
+
+ var oasis1 = { type: jsPsychBKKSurveyText, 
+        data: {trialCategory: "oasis"},
+        preamble: '<center><img src="./img/fire9.jpg"></img></center><p> <p>Reflect on how this picture makes you feel, then record your feeling on the graph</p>', 
+        // For testing you can turn this off so you don't need to click the cirucmplex each time
+        circClick_required: true, 
+        //  For testing set this to zero so you don't need to wait
+        min_duration: trial_time_lower_limit,
+        circ_hide: false,
+        draw_bkk: false, // HIDING BKK FOR THESE INTRODUCITON TRIALS
+        gui_show:false, 
+        questions: []
+      }
+    trainingTimeline.push(oasis1)
+
+ var oasis2 = { type: jsPsychBKKSurveyText, 
+        data: {trialCategory: "oasis"},
+        preamble: '<center><img src="./img/fireworks2.jpg"></img></center><p> <p>Reflect on how this picture makes you feel, then record your feeling on the graph</p>', 
+        // For testing you can turn this off so you don't need to click the cirucmplex each time
+        circClick_required: true, 
+        //  For testing set this to zero so you don't need to wait
+        min_duration: trial_time_lower_limit,
+        circ_hide: false,
+        draw_bkk: false, // HIDING BKK FOR THESE INTRODUCITON TRIALS
+        gui_show:false, 
+        questions: []
+      }
+    trainingTimeline.push(oasis2)
+
+ var oasis3 = { type: jsPsychBKKSurveyText, 
+        data: {trialCategory: "oasis"},
+        preamble: '<center><img src="./img/garbagedump1.jpg"></img></center><p> <p>Reflect on how this picture makes you feel, then record your feeling on the graph</p>', 
+        // For testing you can turn this off so you don't need to click the cirucmplex each time
+        circClick_required: true, 
+        //  For testing set this to zero so you don't need to wait
+        min_duration: trial_time_lower_limit,
+        circ_hide: false,
+        draw_bkk: false, // HIDING BKK FOR THESE INTRODUCITON TRIALS
+        gui_show:false, 
+        questions: []
+      }
+    trainingTimeline.push(oasis3)
+
+
+ var oasis4 = { type: jsPsychBKKSurveyText, 
+        data: {trialCategory: "oasis"},
+        preamble: '<center><img src="./img/lake16.jpg"></img></center><p> <p>Reflect on how this picture makes you feel, then record your feeling on the graph</p>', 
+        // For testing you can turn this off so you don't need to click the cirucmplex each time
+        circClick_required: true, 
+        //  For testing set this to zero so you don't need to wait
+        min_duration: trial_time_lower_limit,
+        circ_hide: false,
+        draw_bkk: false, // HIDING BKK FOR THESE INTRODUCITON TRIALS
+        gui_show:false, 
+        questions: []
+      }
+    trainingTimeline.push(oasis4)
+
+
+    var finishOasis = {
+        type: jsPsychHtmlButtonResponse,
+        data: {trialCategory: "training"},
+        stimulus: '<p>Thanks. You have now completed the preparation section of the study.  You will now begin the experiment</p>' +
+                  '<p>You will be shown 24 different shapes. For each shape click on the graph to record the emotion you think it represents. There are no "wrong" answers so long as you reflect and think about how the shape feels to you - just record how you feel</p>' +
+                  '<p>For each page you will not be able to move on until [10 seconds?] have passed. For each time take the time to reflect on how the shape feels to you before recording your feeling.</p>' +
+                  '<br>', 
         choices: ["continue"]
     }
     trainingTimeline.push(finishTraining)
@@ -317,6 +453,7 @@
     var trainingBlock = {
       timeline: trainingTimeline,
     }
+
 
 
         // ' You have now completed the training section of the study. You will now begin the experiment.</p>'+
@@ -402,7 +539,7 @@
     timeline.push(bkk_sequence);    
 
 //  END  -----------------------------------------------------------------------------
-
+    timeline.push(demog_page)
     timeline.push(debrief_page)
 
 
