--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
         if (typeof gender == 'undefined'){ gender = "not given"}
         if (typeof country == 'undefined'){ country = "not given"}                  
         
-        var training_data = jsPsych.data.get().filter({trialCategory: 'training'});
-        //  CAPTURE ANY INFO WE NEED TO KNOW ABOUT TRAINING
+        // var training_data = jsPsych.data.get().filter({trialCategory: 'oasis'});
 
 
         jsPsych.data.addProperties({
@@ -100,10 +99,12 @@
           country: country
         });
 
-        var bkk_data = jsPsych.data.get().filter({trialCategory: 'bkk stimulus'});
+        var bkk_data = jsPsych.data.get().filter([{trialCategory: 'bkk stimulus'},
+                                                          {trialCategory: 'oasis'}]);
 
         // bkk_data.localSave('csv', jsPsych.randomization.randomID(32) + '.csv')
-        jsPsych.data.displayData();
+        // jsPsych.data.displayData();
+        // bkk_data.displayData()
 
         var postdata = bkk_data.json()
 
@@ -254,7 +255,7 @@
       on_finish: function(data) {
         console.log(data.valence, data.arousal)
           instructioncorrect = false; 
-          if( data.valence <  0.4 & data.arousal < 0.4) {
+          if( data.valence <  -0.6 & data.arousal < -0.6) {
             action = false;
             instructioncorrect = true;
           }
@@ -273,7 +274,7 @@
     var tr_4 = []
     var training4 = { type: jsPsychBKKSurveyText, 
         data: {trialCategory: "training"},
-        preamble: '<center><img src="./img/sad.jpg"></img></center><p> This image is of someone feeling relaxed and cozy. These kinds of feelings belong in the bottom right corner of the graph. They are very low energy (bottom), and very positive (right). Click close to the bottom right corner of the graph, and then click submit.</p>', 
+        preamble: '<center><img src="./img/relaxed.jpg"></img></center><p> This image is of someone feeling relaxed and cozy. These kinds of feelings belong in the bottom right corner of the graph. They are very low energy (bottom), and very positive (right). Click close to the bottom right corner of the graph, and then click submit.</p>', 
         // For testing you can turn this off so you don't need to click the cirucmplex each time
         circClick_required: true, 
         //  For testing set this to zero so you don't need to wait
@@ -286,7 +287,7 @@
       on_finish: function(data) {
         console.log(data.valence, data.arousal)
           instructioncorrect = false; 
-          if( data.valence >  0.6 & data.arousal < 0.4) {
+          if( data.valence >  0.6 & data.arousal < -0.6) {
             action = false;
             instructioncorrect = true;
           }
@@ -304,7 +305,7 @@
     var tr_5 = []
     var training5 = { type: jsPsychBKKSurveyText, 
         data: {trialCategory: "training"},
-        preamble: '<center><img src="./img/sad.jpg"></img></center><p> This image is of someone feeling angry and enraged. These kinds of feelings belong in the top left corner of the graph. They are very high energy (top), and very negative (right). Click close to the top left corner of the graph, and then click submit.</p>', 
+        preamble: '<center><img src="./img/angry.jpg"></img></center><p> This image is of someone feeling angry and aggressive. These kinds of feelings belong in the top left corner of the graph. They are very high energy (top), and very negative (right). Click close to the top left corner of the graph, and then click submit.</p>', 
         // For testing you can turn this off so you don't need to click the cirucmplex each time
         circClick_required: true, 
         //  For testing set this to zero so you don't need to wait
@@ -317,7 +318,7 @@
       on_finish: function(data) {
         console.log(data.valence, data.arousal)
           instructioncorrect = false; 
-          if( data.valence <  0.4 & data.arousal > 0.6) {
+          if( data.valence <  -0.6 & data.arousal > 0.6) {
             action = false;
             instructioncorrect = true;
           }
@@ -336,7 +337,7 @@
     var tr_6 = []
     var training6 = { type: jsPsychBKKSurveyText, 
         data: {trialCategory: "training"},
-        preamble: '<center><img src="./img/sad.jpg"></img></center><p> Many feelings are in-between these extremes. YOu can use the whole graph to record your feelings. If they are more neutral than the feelings you have seen so far, you can click closer to the middle. For example this picture shows medium energy, fairly positive feelings. These should be somewhere towards the centre, between left and right (fairly neutral), and in the top half of the graph, not too high. Click somewhere in that area, then click submit</p>', 
+        preamble: '<center><img src="./img/ambiguous.jpg"></img></center><p> Many feelings are in-between these extremes. You can use anywhere on the graph to record your feelings, closer to the middle or to the edges depending on how you feel. How does this image make you feel? Click on the graph to record your feeling, then click submit</p>', 
         // For testing you can turn this off so you don't need to click the cirucmplex each time
         circClick_required: true, 
         //  For testing set this to zero so you don't need to wait
@@ -348,13 +349,11 @@
       on_trial_start: function() { setTimeout(function() {setDisplay("jspsych-btn","")}, 1000)},
       on_finish: function(data) {
         console.log(data.valence, data.arousal)
-          instructioncorrect = false; 
-          // if( data.valence >  0.25 & data.valence <  0.75 & data.arousal > 0.5 & data.arousal < 0.9) {
-          if( data.valence >  0.25) {
-         
-            action = false;
-            instructioncorrect = true;
-          }
+          instructioncorrect = true; 
+          // if( data.valence >  -0.5 & data.valence <  0.5 & data.arousal > 0.1 & data.arousal < 0.7) {         
+          //   action = false;
+          //   instructioncorrect = true;
+          // }
         }
       } 
       tr_6.push(training6)
@@ -447,7 +446,7 @@
                   '<br>', 
         choices: ["continue"]
     }
-    trainingTimeline.push(finishTraining)
+    trainingTimeline.push(finishOasis)
 
 
     var trainingBlock = {
