--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
         preamble: '<h1>Training Section</h1><p>In the experiment you will be shown various shapes and asked to record your emotional response to each shape. The next few pages will introduce how to record your response <b>you must read all of this page. The page is timed and you cannot move forward more quickly by not reading. </b> </p>' +
 
 
-                  '<p>To record your emotional response you will click on a graph like the one shown below. The top of the graph represents very high energy feelings. The bottom of the graph represents very low energy feelings. The centre represents neutral feelings. You can click anywhere from top to bottom to record more or less energetic feelings</p>'+
+                  '<p>To record your emotional response you will click on a graph like the one shown below - this is called <b>circumplex</b>. The top of the graph represents very high energy feelings, such as excited or alarmed. The bottom of the graph represents very low energy feelings, such as calm or bored. The centre represents neutral feelings. You can click anywhere from top to bottom to record more or less energetic feelings.</p>'+
 
-                  '<p> Similarly, the left side of the graph represents very negative feelings, and the right side represents very positive feelings. Again, the centre represents neutral feelings, and you can click at any point which represents your feeling </p>'+
+                  '<p> Similarly, the left side of the graph represents very negative feelings, such as gloomy or annoyed; and the right side represents very positive feelings, such as delighted or satisfied. Again, the centre represents neutral feelings, and you can click at any point which represents your feeling.</p>'+
 
                   '<p>For each shape you should look at the shape and take some time to reflect on how it feels to you. Then you should click on the place on the graph that represents how you feel.  </p>'  +
 
@@ -440,9 +440,9 @@
     var finishOasis = {
         type: jsPsychHtmlButtonResponse,
         data: {trialCategory: "training"},
-        stimulus: '<p>Thanks. You have now completed the preparation section of the study.  You will now begin the experiment</p>' +
-                  '<p>You will be shown 24 different shapes. For each shape click on the graph to record the emotion you think it represents. There are no "wrong" answers so long as you reflect and think about how the shape feels to you - just record how you feel</p>' +
-                  '<p>For each page you will not be able to move on until [10 seconds?] have passed. For each time take the time to reflect on how the shape feels to you before recording your feeling.</p>' +
+        stimulus: '<p>Thanks. You have now completed the preparation section of the study.  You will now begin the experiment.</p>' +
+                  '<p>You will be shown 24 (TODO: or 54, we need to justify with the pilot data from May.) different shapes. For each shape click on the graph to record the emotion you think it represents. There are no "wrong" answers so long as you reflect and think about how the shape feels to you - just record how you feel.</p>' +
+                  '<p>For each page you will not be able to move on until [5-10 seconds?] have passed. For each time take the time to reflect on how the shape feels to you before recording your feeling.</p>' +
                   '<br>', 
         choices: ["continue"]
     }
